2012-08-17  Mike Frysinger  <vapier@gentoo.org>

	* sysdeps/unix/sysv/linux/nice.c: Adjust #include.

2012-08-17  Marek Polacek  <polacek@redhat.com>

	* sysdeps/ieee754/ldbl-96/s_sincosl.c (__sincosl): Use __attribute__
	((unused)) on I1, which is set by GET_LDOUBLE_WORDS but never used.

2012-08-17  Roland McGrath  <roland@hack.frob.com>

	* configure.in: Add AC_SUBST for sysheaders.
	* configure: Regenerated.
	* config.make.in (sysheaders): New substituted variable.

	* sysdeps/unix/mkfifo.c: Moved ...
	* sysdeps/posix/mkfifo.c: ... here.
	* sysdeps/unix/mkfifoat.c: Moved ...
	* sysdeps/posix/mkfifoat.c: ... here.

	* sysdeps/unix/utime.c: Moved ...
	* sysdeps/posix/utime.c: ... here.

	* sysdeps/unix/time.c: Moved ...
	* sysdeps/posix/time.c: ... here.
	* sysdeps/unix/sysv/linux/time.c: Adjust #include.
	* sysdeps/unix/sysv/linux/sparc/sparc64/time.c: Likewise.

	* sysdeps/unix/nice.c: Moved ...
	* sysdeps/posix/nice.c: ... here.

	* sysdeps/unix/alarm.c: Moved ...
	* sysdeps/posix/alarm.c: ... here.

	* intl/Makefile ($(codeset_mo)): Depend on the input file.

2012-08-17  Jeff Law <law@redhat.com>

	* intl/Makefile (codeset_mo): New variable.
	($(codeset_mo)): New target.
	(tst-codeset.out): Depend on that.  Remove explicit rule.
	(tst-gettext3.out, tst-gettext5.out): Likewise.
	(LOCPATH-ENV, tst-codeset-ENV): New variables.
	(tst-gettext3-ENV, tst-gettext5-ENV): Likewise.
	* intl/tst-codeset.sh: Remove.
	* intl/tst-gettext3.sh: Likewise.
	* intl/tst-gettext5.sh: Likewise.

2012-08-17  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/unix/inet/syscalls.list: File removed.  Move contents into ...
	* sysdeps/unix/syscalls.list: ... here.

	* sysdeps/posix/getaddrinfo.c
	(save_gaiconf_mtime, check_gaiconf_mtime): New functions.
	(gaiconf_init, gaiconf_reload): Use them.
	[!_STATBUF_ST_NSEC]
	(gaiconf_mtime, save_gaiconf_mtime, check_gaiconf_mtime):
	Define using time_t rather than struct timespec.
