@@ -1,3 +1,12 @@
+2012-08-18  Mike Frysinger  <vapier@gentoo.org>
+
+	[BZ #9685]
+	* include/unistd.h (__have_pipe2): Change define into an extern int.
+	(__have_dup3): Likewise.
+	* socket/have_sock_cloexec.c: Include fcntl.h.
+	(__have_pipe2): New variable.
+	(__have_dup3): Likewise.
+
 2012-08-17  Mike Frysinger  <vapier@gentoo.org>
 
 	* sysdeps/unix/sysv/linux/nice.c: Adjust #include.
